[workspace]

members = [
  "artifact_manager",
  "artifact_pool",
  "base/server",
  "base/thread",
  #"boundary_node/control_plane",
  "canister_client",
  "cycles_account_manager",
  "canonical_state",
  "certified_vars",
  "config",
  "consensus",
  "consensus/message",
  "cow_state",
  "criterion_time",
  "crypto",
  "crypto/internal/crypto_lib/basic_sig/der_utils",
  "crypto/internal/crypto_lib/basic_sig/ecdsa_secp256k1",
  "crypto/internal/crypto_lib/basic_sig/ecdsa_secp256r1",
  "crypto/internal/crypto_lib/basic_sig/ecdsa_secp256_wycheproof_tests",
  "crypto/internal/crypto_lib/basic_sig/ed25519",
  "crypto/internal/crypto_lib/basic_sig/iccsa",
  "crypto/internal/crypto_lib/bls12_381/serde/miracl",
  "crypto/internal/crypto_lib/bls12_381/common",
  "crypto/internal/crypto_lib/fs_ni_dkg",
  "crypto/internal/crypto_lib/multi_sig/bls12_381",
  "crypto/internal/crypto_lib/threshold_sig/bls12_381",
  "crypto/internal/crypto_lib/tls",
  "crypto/internal/crypto_lib/types",
  "crypto/internal/crypto_service_provider",
  "crypto/internal/csp_test_utils",
  "crypto/internal/logmon",
  "crypto/internal/test_vectors",
  "crypto/key_validation",
  "crypto/sha256",
  "crypto/test_utils",
  "crypto/tls_interfaces",
  "crypto/tls",
  "crypto/tree_hash",
  "crypto/utils/basic_sig",
  "crypto/utils/threshold_sig",
  #"cup_explorer",
  #"drun",
  #"replay",
  #"elastic_common_schema",
  "embedders",
  "execution_environment",
  #"guestos_vsock_agent",
  "http_handler",
  #"http_utils",
  #"ic_fe",
  #"ic_fe/log",
  #"ic_fondue",
  #"ic_fondue/fondue",
  #"ic_p8s_service_discovery",
  #"identity",
  "ingress_manager",
  "interfaces",
  #"log_analyzer",
  #"memory_check",
  "memory_tracker",
  "messaging",
  "monitoring/context_logger",
  "monitoring/logger",
  "monitoring/metrics",
  "monitoring/metrics_exporter",
  #"monitoring/prober",
  #"nns",
  "nns/constants",
  "nns/common",
  #"nns/handlers/lifeline",
  #"nns/handlers/root",
  #"nns/init",
  #"nns/inspector",
  #"nns/integration_tests",
  #"nns/governance",
  #"nns/test_utils",
  #"nns/test_utils_macros",
  #"nns/gtc",
  #"nns/gtc_accounts",
  #"determinism_test",
  #"nodemanager",
  "p2p",
  "phantom_newtype",
  "prep",
  #"process_manager",
  "protobuf",
  #"registry/admin",
  #"registry/canister",
  "registry/client",
  "registry/common",
  #"registry/dump",
  "registry/keys",
  "registry/provisional_whitelist",
  "registry/routing_table",
  "registry/subnet_type",
  "registry/transport",
  #"release",
  "replica",
  "replica_tests",
  "replicated_state",
  "rosetta-api",
  "rosetta-api/ledger_canister",
  "rosetta-api/cycles_minting_canister",
  "rosetta-api/cycles_minting_client",
  "rosetta-api/test_utils",
  "runtime",
  "rust_canisters/canister_test",
  "rust_canisters/dfn_core",
  "rust_canisters/dfn_candid",
  "rust_canisters/dfn_http",
  "rust_canisters/dfn_json",
  "rust_canisters/dfn_macro",
  "rust_canisters/dfn_protobuf",
  "rust_canisters/on_wire",
  #"rust_canisters/pmap",
  #"rust_canisters/stable_reader",
  #"rust_canisters/statesync_test",
  #"rust_canisters/tests",
  #"rust_canisters/xnet_test",
  #"scenario_tests",
  #"sdk",
  #"starter",
  "state_manager",
  #"state_machine_tests",
  "state_layout",
  #"state_tool",
  "sys",
  "system_api",
  "test_utilities",
  "test_utilities/artifact_pool",
  #"tests",
  "transport",
  "tree_deserializer",
  "types/types",
  "types/types_test_utils",
  "types/base_types",
  "types/error_types",
  "types/ic00_types",
  "types/wasm_types",
  "universal_canister/lib",
  "utils",
  "validator",
  #"workload_generator",
  #"wallet",
  "wasm_utils",
]

exclude = [
  "universal_canister/impl",
]

[profile.release]
# Add debug information to the release build (does NOT reduce the level of optimization!)
# Makes flamegraphs more readable.
# https://doc.rust-lang.org/cargo/reference/manifest.html#the-profile-sections
debug = true

[profile.dev.package.miracl_core_bls12381]
# Optimise the miracl_core_bls12381 cryptographic library, or else NiDKG tests take 4 hours.
opt-level = 3

[patch.crates-io.ic-types]
version = "0.1.2"
git = "https://github.com/dfinity/agent-rs.git"
rev = "6652a800969e7e09ecdf40ed16a2d78abecde7d3"


[patch.crates-io]
raw-cpuid812 = { package="raw-cpuid", version="8.1.2", git = "https://github.com/dfinity-lab/rust-cpuid.git", rev = "03c258337c387dbf559778ba3cb886d45ed46b24"}
