[package]
name = "ic-canister-client"
version = "0.1.0"
edition = "2018"

[dependencies]
ic-interfaces = { path = "../interfaces" }
ic-protobuf = { path = "../protobuf" }
ic-types = { path = "../types/types" }
bytes = "0.5.4"
ed25519-dalek = "1.0.0-pre.3"
hyper = "0.13.7"
hyper-tls = "0.4.3"
phantom_newtype = { path = "../phantom_newtype" }
prost = "0.6"
reqwest = "0.10.8"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.1"
tokio = { version = "0.2.22", features = [ "macros" ] }

[dev-dependencies]
ic-test-utilities = { path = "../test_utilities" }
ic-validator = { path = "../validator" }
rand_chacha = "0.2.2"
rand_core = "0.5.1"
tokio-test = "0.2.1"
