[package]
name = "ic-interfaces"
version = "0.1.0"
edition = "2018"

[dependencies]
ic-crypto-tree-hash = { path = "../crypto/tree_hash" }
ic-protobuf = { path = "../protobuf" }
ic-registry-routing-table = { path = "../registry/routing_table" }
ic-registry-transport = { path = "../registry/transport" }
ic-types = { path = "../types/types" }
phantom_newtype = { path = "../phantom_newtype" }
prost = "0.6"
rand = "0.7.3"
serde = { version = "1.0.99", features = ["derive"] }
serde_bytes = "0.11"
