
[package]
name = "ic-rosetta-api"
version = "0.0.1"
authors = ["The Internet Computer Project Developers"]
description = "Build Once. Integrate Your Blockchain Everywhere. "
edition = "2018"
build = "build.rs"
default-run = "ic-rosetta-api"

[dependencies]
actix-web = "3.0.2"
base64 = "0.13.0"
futures = "0.3.8"
hex = "0.4.2"
ic-types = { path = "../types/types" }
ic-interfaces = { path = "../interfaces" }
ic-crypto = { path = "../crypto" }
ic-crypto-sha256 = {path = "../crypto/sha256/"}
ic-crypto-tree-hash = { path = "../crypto/tree_hash" }
ic-crypto-utils-threshold-sig = { path = "../crypto/utils/threshold_sig" }
im = { git = "https://github.com/dfinity-lab/im-rs", branch = "fix-remove-index-ordmap", features = [ "serde" ] }
ic-canister-client = { path = "../canister_client" }
itertools = "0.10.0"
log = "*"
log4rs = "1.0.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_cbor = "0.11"
dfn_core = {path = "../rust_canisters/dfn_core"}
dfn_candid = {path = "../rust_canisters/dfn_candid"}
dfn_protobuf = {path = "../rust_canisters/dfn_protobuf"}
candid = "0.6.15"
dfn_macro = {path = "../rust_canisters/dfn_macro"}
on_wire = {path = "../rust_canisters/on_wire"}
lazy_static = "1.4.0"
ledger-canister = {path = "canister"}
cycles_minting_canister = {path = "cycles_minting_canister"}
cycles_minting_client = {path = "cycles_minting_client"}
rand = "0.7"
structopt = "0.3.20"
async-trait = "0.1.41"
tokio = { version = "0.2.22", features = ["full"] }
shadow-rs = { version = "0.5", default-features = false, features = [] }
tree-deserializer = { path = "../tree_deserializer" }
url = "2.2.1"

#temporarily copied from dev-dependencies
actix-rt = "*"

[build-dependencies]
shadow-rs = { version = "0.5", default-features = false, features = [] }
