
[package]
name = "ic-rosetta-api"
version = "0.8.0"
authors = ["The Internet Computer Project Developers"]
description = "Build Once. Integrate Your Blockchain Everywhere. "
edition = "2018"
default-run = "ic-rosetta-api"

[dependencies]
actix-web = "4.0.0-beta.6"
actix-rt = "2.2.0"
base64 = "0.13.0"
futures = "0.3.8"
hex = "0.4.2"
ic-types = { path = "../types/types" }
ic-interfaces = { path = "../interfaces" }
ic-crypto = { path = "../crypto" }
ic-crypto-sha256 = {path = "../crypto/sha256/"}
ic-crypto-tree-hash = { path = "../crypto/tree_hash" }
ic-crypto-utils-threshold-sig = { path = "../crypto/utils/threshold_sig" }
ic-crypto-internal-threshold-sig-bls12381 = { path = "../crypto/internal/crypto_lib/threshold_sig/bls12_381" }
ic-nns-constants = { path = "../nns/constants" }
ic-nns-governance = { path = "../nns/governance" }
ic-canister-client = { path = "../canister_client" }
itertools = "0.10.0"
log = "0.4.14"
log4rs = "1.0.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_cbor = "0.11"
dfn_core = {path = "../rust_canisters/dfn_core"}
dfn_candid = {path = "../rust_canisters/dfn_candid"}
dfn_protobuf = {path = "../rust_canisters/dfn_protobuf"}
candid = "0.6.15"
dfn_macro = {path = "../rust_canisters/dfn_macro"}
on_wire = {path = "../rust_canisters/on_wire"}
ledger-canister = {path = "ledger_canister"}
cycles-minting-canister = {path = "cycles_minting_canister"}
rand = "0.7"
structopt = "0.3.20"
async-trait = "0.1.41"
reqwest = "0.11.1"
tokio = { version = "1.2.0", features = ["full"] }
tree-deserializer = { path = "../tree_deserializer" }
url = "2.2.1"

rusqlite = "0.25.3"

[[bin]]
name = "utils"
path = "src/utils.rs"

[dev-dependencies]
tempfile = "3.1.0"
ic-rosetta-test-utils = { path = "test_utils" }

[[test]]
name = "rosetta-api-tests"
path = "test/test_utils.rs"
