[package]
name = "ic-crypto-test-utils"
version = "0.8.0"
edition = "2018"

[dependencies]
ic-crypto-internal-csp-test-utils = { path = "../internal/csp_test_utils" }
ic-protobuf = { path = "../../protobuf" }
ic-types = { path = "../../types/types" }
openssl = "0.10.29"
phantom_newtype = { path = "../../phantom_newtype" }
rand = "0.7.3"
serde = { version = "1.0.99", features = [ "derive" ] }
strum_macros = "0.18.0"
tokio = { version = "0.2", features = ["net"] }
tokio-openssl = "0.4.0"
