[package]
name = "ic-registry-dump"
version = "0.8.0"
edition = "2018"

[dependencies]
anyhow = "1.0.31"
gflags = "0.3.7"
gflags-derive = "0.1"
ic-registry-client = { path = "../client" }
ic-registry-subnet-type = { path = "../subnet_type" }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.54"
thiserror = "1.0"
tokio = { version = "0.2" }
url = { version = "2.1.1", features = ["serde"] }
