[package]
name = "ledger-canister"
version = "0.0.1"
authors = []
description = "Like an accountant, but on the blockchain!"
edition = "2018"

[dependencies]
dfn_core = {path = "../../rust_canisters/dfn_core"}
dfn_candid = {path = "../../rust_canisters/dfn_candid"}
candid = "0.6.10"
lazy_static = "1.4.0"
serde = "1.0"
ic-crypto-sha256 = {path = "../../crypto/sha256/"}
ic-types = { path = "../../types/types" }
hex = "0.4.2"
digest = "0.9.0"
phantom_newtype = { path = "../../phantom_newtype" }

[[bin]]
name = "ledger-canister"
path = "src/main.rs"

[dev-dependencies]
canister-test = {path = "../../rust_canisters/canister_test"}

[[test]]
name = "test"
path = "test/test.rs"