[package]
name = "ic-rosetta-test-utils"
version = "0.1.0"
authors = ["The Internet Computer Project Developers"]
edition = "2018"


[dependencies]
ed25519-dalek = "1.0.1"
hex = "0.4.2"
ic-rosetta-api = {path = "../"}
ic-canister-client = { path = "../../canister_client" }
ic-types = { path = "../../types/types" }
ledger-canister = {path = "../ledger_canister"}
log = "0.4.14"
nix = "0.20.0"
rand = "0.7"
rand_distr = "0.3.0"
serde = { version = "1.0.99", features = ["derive", "rc"] }
serde_json = "1.0"
serde_cbor = "0.11"
tempfile = "3.1.0"
tokio = {version = "0.2.22", features = ["full"]}
url = "2.1.1"
