[package]
name = "dfn_core"
version = "0.1.0"
edition = "2018"
build = "build.rs"

[lib]
name = "dfn_core"
path = "src/lib.rs"

[[bin]]
name = "wasm"
path = "test/wasm.rs"

[[test]]
name = "test"
path = "test/test.rs"

[dependencies]
hex = "0.4.2"
wee_alloc = { version = "0.4.3", optional = true }
cfg-if = "0.1.10"
on_wire = { path = "../on_wire" }
futures = "0.3.6"
ic-base-types = { path = "../../types/base_types" }

[build-dependencies]
rustversion = "1.0"

[dev-dependencies]
canister-test = { path = "../canister_test" }
dfn_json = { path = "../dfn_json" }

[features]
nightly_compiler = []
