[package]
name = "ic-base-types"
version = "0.1.0"
edition = "2018"

[dependencies]
base32 = "0.4.0"
byte-unit = "3.1.3"
candid = "0.6.3"
crc32fast = "1.2.0"
ic-crypto-sha256 = { path = "../../crypto/sha256" }
ic-protobuf = { path = "../../protobuf" }
phantom_newtype = { path = "../../phantom_newtype" }
serde = { version = "1.0.99", features = ["derive", "rc"] }

[dev-dependencies]
assert_matches = "1.3.0"
proptest = "0.9.4"
proptest-derive = "0.1.0"
serde_cbor = "0.11.1"
