[package]
name = "ic-types"
version = "0.1.0"
edition = "2018"

[dependencies]
base32 = "0.4.0"
base64 = "0.11.0"
bincode = "1.2.1"
byte-unit = "3.1.3"
candid = "0.6.3"
chrono = "0.4"
crc32fast = "1.2.0"
derive_more = { git = "https://github.com/dfinity-lab/derive_more", branch = "master" }
hex = "0.4.2"
ic-base-types = { path = "../base_types" }
ic-error-types = { path = "../error_types" }
ic-ic00-types = { path = "../ic00_types" }
ic-crypto-internal-types = { path = "../../crypto/internal_types" }
ic-crypto-sha256 = { path = "../../crypto/sha256" }
ic-crypto-tree-hash = { path = "../../crypto/tree_hash" }
ic-protobuf = { path = "../../protobuf" }
ic-registry-transport = { path = "../../registry/transport" }
ic-utils = { path = "../../utils" }
maplit = "1.0.2"
num-traits = "0.2.12"
once_cell = { git = "https://github.com/dfinity-lab/once_cell", branch = "master" }
phantom_newtype = { path = "../../phantom_newtype" }
prost = "0.6"
regex = "1.3.9"
serde = { version = "1.0.99", features = ["derive", "rc"] }
serde_bytes = "0.11"
serde_cbor = "0.11.1"
serde_json = "1.0.40"
strum = "0.18.0"
strum_macros = "0.18.0"
thiserror = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ic-sys = { path = "../../sys" }

[dev-dependencies]
assert_matches = "1.3.0"
hex-literal = "0.2.1"
pretty_assertions = "0.6.1"
rusty-fork = "0.3.0"
toml = "0.5.6"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
proptest = "0.9.4"
proptest-derive = "0.1.0"
