[package]
name = "ic-crypto-internal-test-vectors"
version = "0.1.0"
authors = ["Max <max@dfinity.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# NO ic-* dependencies are allowed here
hex = "0.4.2"
strum = "0.18.0"
strum_macros = "0.18.0"
